--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
   "dev": "vite",
   "prepare": "npm run build",
-  "build": "tsc -p tsconfig.build.json && vite build",
+  "build": "vite build && tsc -p tsconfig.build.json",
   "lint": "eslint .",
   "preview": "vite preview",
   "storybook": "storybook dev -p 6006",
