--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "description": "Biblioteca de componentes React/Ionic customizados",
   "main": "dist/cb-ui.cjs.js",
   "module": "dist/cb-ui.es.js",
-  "types": "dist/index.d.ts",
+  "unpkg": "./dist/cb-ui.umd.js",
+  "types": "dist/types/index.d.ts", 
   "files": [
     "dist"
   ],
